--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://kit.fontawesome.com/0801046459.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <title>Chats | Kakao Clone</title>
 </head>
 <body>
@@ -41,20 +42,24 @@
         <ul class="chats__list">
             <li class="chats__chat">
                 <a href="chat.html">
-                <div class="chat__column">
-                        <img class="chat__avatar g-avatar" src="images/avatar.jpg">
-                    <div class="chat__content">
-                        <span class="chat__username">
-                            Lynn
-                        </span>
-                        <span class="chat__preview">
-                            Going home
-                        </span>
+                    <div class="chats__chat friend friend--lg">
+                            <div class="friend__column">
+                                <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
+                                <div class="friend__content">
+                                <span class="friend__name">
+                                    Lynn
+                                </span>
+                                <span class="friend__bottom-text">
+                                    Going Home
+                                </span>
+                                </div>
+                            </div>
+                            <div class="friend__column">
+                                    <span class="chat__timestamp">
+                                        March 8
+                                    </span>
+                            </div>
                     </div>
-                </div>
-                <div class="chat__column">
-                    <span class="chat__timestamp">Yesterday</span>
-                </div>
                 </a>
             </li>
         </ul>
@@ -68,6 +73,7 @@
             </li>
             <li class="nav__list-item">
                 <a href="index.html" class="nav__list-link">
+                    <div class="nav__badge">8</div>
                     <i class="fas fa-comment"></i>
                 </a>
             </li>
