--- a/more.html
+++ b/more.html
@@ -139,5 +139,8 @@
             </li>
         </ul>
     </nav>
+    <div class="bigScreen">
+            <span class="bigScreen__text">화면을 줄여 주세요~~~! </span>
+    </div>
 </body>
 </html>
