--- a/settings.html
+++ b/settings.html
@@ -68,6 +68,8 @@
         </section>
     
     </main>
-   
+    <div class="bigScreen">
+            <span class="bigScreen__text">화면을 줄여 주세요~~~! </span>
+    </div>
 </body>
 </html>
