--- a/chat.html
+++ b/chat.html
@@ -106,7 +106,7 @@
         </div>
     </div>
     <div class="bigScreen">
-            <span class="bigScreen__text">화면을 줄여 주세요~~~! </span>
+            <span class="bigScreen__text">화면을 줄여 주세요~~~제발 </span>
     </div>
    
 </body>
