--- a/friends.html
+++ b/friends.html
@@ -114,7 +114,7 @@
         </ul>
     </nav>
     <div class="bigScreen">
-            <span class="bigScreen__text">화면을 줄여 주세요~~~! </span>
+            <span class="bigScreen__text">화면을 줄여 주세요~~~제발 </span>
     </div>
 </body>
 </html>
