--- a/friends.html
+++ b/friends.html
@@ -42,10 +42,10 @@
                 <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
                 <div class="friend__content">
                 <span class="friend__name">
-                    Nicolás Serrano
+                    김성준
                 </span>
                 <span class="friend__status">
-                    nomadcoders.co
+                    nouna12@naver.com
                 </span>
                 </div>
             </div>
