--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                 <img src="images/avatar.jpg" class="m-avatar friend__avatar" />
                                 <div class="friend__content">
                                 <span class="friend__name">
-                                    Lynn
+                                    김성준 
                                 </span>
                                 <span class="friend__bottom-text">
                                     Going Home
